--- a/MathParserAngularUI/packages.config
+++ b/MathParserAngularUI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.2.14" targetFramework="net40" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
   <package id="CodeContracts.Unofficial" version="1.0.0.2" targetFramework="net40" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.4.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.Core" version="4.0.4.12182" targetFramework="net40" />
@@ -35,5 +36,5 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net40" />
 </packages>
